# tonal-distancing

./: .gitignore  Cargo.toml  Dockerfile  README.md  report.txt  stop_words.txt
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs  spells.rs  stop_words.rs
tdist/: Cargo.toml
test_files/: test.docx  test.txt  test2.txt  test3.txt
