[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63", features = ["json"]}
anyhow = "1.0"
library = {path = "../library"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
panic="abort"
opt-level="z"
lto="fat"
codegen-units=1
